--- a/Engineers/appsettings.json
+++ b/Engineers/appsettings.json
@@ -18,6 +18,7 @@
     "PathToURL": "Upload/",
     "PathToDefaultUserImage": "Upload/Default/DefaultUser.png",
     "PathToDefaultOrderImage": "Upload/Default/DefaultImage.png",
+    "PathToBlueprins": "Blueprints\\",
     "IsDevelopment": false
   },
   "Debug": {
@@ -29,6 +30,7 @@
     "PathToURL": "Upload/",
     "PathToDefaultUserImage": "Upload/Default/DefaultUser.png",
     "PathToDefaultOrderImage": "Upload/Default/DefaultImage.png",
+    "PathToBlueprins": "Blueprints\\",
     "IsDevelopment": true
   }
 }
